@@ -41,8 +41,6 @@ class WXDLLIMPEXP_FWD_CORE wxListEvent;
 
 #include "catalog.h"
 
-extern bool g_shadedList;
-
 // list control with both columns equally wide:
 class PoeditListCtrl : public wxListView
 {
