@@ -118,10 +118,6 @@
         <label>Show automatic c_omments window</label>
         <checkable>1</checkable>
       </object>
-      <object class="wxMenuItem" name="menu_shaded">
-        <label>_Shaded translations list</label>
-        <checkable>1</checkable>
-      </object>
       <style>wxMENU_TEAROFF</style>
     </object>
     <object class="wxMenu" name="menu_help">
