@@ -18,7 +18,8 @@ Version 1.5 (not yet released)
 - added Bosnian translation (Kenan Dervisevic)
 - removed View->Fullscreen view, it doesn't make sense in this kind of app
 - better application and document icons
-- minor UI improvements
+- removed the "Shaded translations list" option, it's now always enabled
+- misc minor UI improvements
 
 Version 1.4.5
 -------------
